<resources>
    <string name="app_name">DL Calculator</string>
    <string name="version">1.01</string>
    <string name="versionCode">2</string>

    <!--Adview Id for Test-->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <!--AdView Id for Publishing-->
    <!--<string name="banner_ad_unit_id">ca-app-pub-7942440273858612/9712071481</string>-->

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_scenario2">Team 1 Interruptions</string>
    <string name="title_activity_about_page">About</string>
    <string name="title_activity_scenario1">Team 2 Interruptions</string>
    <string name="title_activity_how_to_page">Instructions</string>
    <string name="start_inning_1_overs">Initial Number of overs</string>
    <string name="start_inning_2_overs">Overs allocated for Team 2</string>
    <string name="team_1_full_amount">Team 1 batted the allotted overs?</string>
    <string name="team_1_revised">Team 1 revised total calculated?</string>
    <string name="interruptions">How many interruptions were in Team 2\'s inning? (Max. 3)</string>
    <string name="interruptions2">How many interruptions were in Team 1\'s inning? (Max. 3)</string>
    <string name="interruption_1">Interruption 1</string>
    <string name="interruption_2">Interruption 2</string>
    <string name="interruption_3">Interruption 3</string>
    <string name="interruption_1_over">Which over was the play interrupted?</string>
    <string name="interruption_1_wickets">Wickets lost at interruption</string>
    <string name="interruption_1_remaining">Overs remaining at the end of interruption</string>
    <string name="overs">Overs</string>
    <string name="next">next</string>
    <string name="team_1_final_score">Target for second innings</string>
    <string name="team_1_score">Team 1 score</string>
    <string name="team_1_score_DL">Team 1 score after DL calculation</string>
    <string name="total">Total</string>
    <string name="wickets_inning_1">Team 1 Wickets</string>
    <string name="wickets">Wickets</string>
    <string name="total_at_interruption">Total at interruption (or assumption)</string>
    <string name="t2_total_at_interruption">Team 2 Total at interruption</string>
    <string name="calculate">Calculate</string>
    <string name="team2overs_first_innings">How many overs will Team 2 play</string>
    <string name="team_1_final_total">Team 1 final total</string>
    <string name="app_bar_about">About</string>
    <string name="app_bar_instructions">Instructions</string>
    <string name="dummy_text">Dummy Text</string>
    <string name="g50_prompt">G50</string>
    <string name="second_innings_tip">Tip: If there were interruptions in the first innings, please enter the Team 1 values after the calculations were done.</string>

    <string-array name="did_team_1_bat_array">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="yes_no_array">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="interruptions_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>


    <string-array name="g50_arrays">
        <item>200</item>
        <item>245</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="g50_title">1. What is G50?</string>
    <string name="g50_intro">G50 is the average score expected from the team batting first in an uninterrupted 50 overs-per-innings match. This will vary with the level of competition and over time. The annual ICC Playing Handbook gives the values of G50 to be used each year when the D/L Standard Edition is applied:\n\n200: Teams below first class cricket (U-19, U-15, Associate nations)\n245: First class cricket and above</string>
    <string name="how_to_team1_completed_body_text">When calculating the par score for team 2, the user must insert the Number of overs (the overs both teams agreed to play at the start of the match). Did the team 1 bat their full amount of overs? Yes. Insert the Team 1 total, wickets and click next. Insert the number of interruptions that occurred for Team 2. If it is 1, insert the over (eg: over 25.2) that was interrupted, the total and wickets at the interruption. Finally, insert the number of overs Team 2 will be getting after the interruption and click calculate. If 2nd and 3rd interruptions occur after awhile, Please change the number of interruptions accordingly and fill in the information.</string>
    <string name="how_to_team1_completed_title_text">2. Par Score for Team 2 After Team 1 Completed their Allotted Number of Overs</string>
    <string name="how_to_team1_incomplete_no_data_title_text">3. Calculate Team 1 Score in the Case of not being able to Finish Batting their Allotted Number of Overs</string>
    <string name="how_to_team1_incomplete_no_data_body_text">When there are interruptions for Team 1, insert the number of overs teams started to play. Turn the switch off since the Team 1 have not batted the complete number of overs. Then, turn off the switch for the Team 1 revised total and click next. Add the number of interruptions and If it is 1, insert the over (eg: over 25.2) that was interrupted, the total and wickets at the interruption. Insert the number of overs Team 1 will be getting after the interruption. Finally, insert the total Team 1 managed to get for the number of overs they batted and insert the number of overs Team 2 will be batting and click calculate.</string>
    <string name="how_to_team1_incomplete_yes_data_title_text">4. Calculate the Par Score for Team 2 when both teams had Interruptions</string>
    <string name="how_to_team1_incomplete_yes_data_body_text">To calculate Team 1 total, please read topic 2. Afterwards, come back to main page and insert the number of overs teams had at the start of the match. Then, turn off the switch for team 1 bat their full amount of overs. Keep the switch on for knowing Team 1 revised total. Then, insert the data that was calculated according to topic 2. Next, insert the number of overs Team 2 will be getting at the start of their inning and click next. Finally, insert the interruption information according to topic 1 and calculate.</string>
    <string name="g50_expected_average_score">G50 - Expected Average Score</string>
    <string name="number_of_interruptions">Number of interruptions</string>
    <string name="title_activity_team_selection">TeamSelection</string>
    <string name="calculate_total_headline">Please Select an Inning to Calculate Total</string>

    <!--Shared Preference-->
    <string name="first_innings_resources"/>
    <string name="over">Over</string>
</resources>
