<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B2DFDB">

    <Button
        android:id="@+id/next_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom"
        android:clickable="false"
        android:onClick="scenarioBtn"
        android:text="@string/next" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/next_button1"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            tools:context="com.sportsoutclass.outclassdl.Team1Info">

            <TextView
                android:id="@+id/interruptions_text_view"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:paddingRight="30dp"
                android:paddingTop="15dp"
                android:text="@string/interruptions"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/interruptions_edit_text"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/interruptions_text_view"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:paddingTop="15dp" />
            <!--android:hint="@string/interruptions_hint"-->

            <TextView
                android:id="@+id/interruption_1_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/interruptions_edit_text"
                android:paddingTop="25dp"
                android:text="@string/interruption_1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/which_over_interruption_1_text_view"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/interruption_1_text_view"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/interruption_1_over"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/which_over_interruption_1_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/which_over_interruption_1_text_view"
                android:layout_toEndOf="@+id/which_over_interruption_1_text_view"
                android:layout_toRightOf="@+id/which_over_interruption_1_text_view"
                android:hint="@string/overs"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:paddingBottom="15dp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/wickets_lost_interruption_1_text_view"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/which_over_interruption_1_text_view"
                android:paddingBottom="10dp"
                android:paddingRight="5dp"
                android:text="@string/interruption_1_wickets"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/wickets_lost_interruption_1_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/wickets_lost_interruption_1_text_view"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_toEndOf="@+id/wickets_lost_interruption_1_text_view"
                android:layout_toRightOf="@+id/wickets_lost_interruption_1_text_view"
                android:hint="wickets"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/overs_remaining_interruption_1_text_view"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/wickets_lost_interruption_1_text_view"
                android:paddingRight="55dp"
                android:paddingTop="10dp"
                android:text="@string/interruption_1_remaining"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/overs_remaining_interruption_1_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/overs_remaining_interruption_1_text_view"
                android:layout_toEndOf="@+id/which_over_interruption_1_text_view"
                android:layout_toRightOf="@+id/which_over_interruption_1_text_view"
                android:hint="@string/overs"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:paddingBottom="15dp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/interruption_2_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/overs_remaining_interruption_1_text_view"
                android:paddingTop="25dp"
                android:text="@string/interruption_2"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/which_over_interruption_2_text_view"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/interruption_2_text_view"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/interruption_1_over"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/which_over_interruption_2_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/which_over_interruption_2_text_view"
                android:layout_toEndOf="@+id/which_over_interruption_2_text_view"
                android:layout_toRightOf="@+id/which_over_interruption_2_text_view"
                android:hint="@string/overs"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:paddingTop="15dp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/wickets_lost_interruption_2_text_view"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/which_over_interruption_2_text_view"
                android:paddingBottom="10dp"
                android:paddingRight="5dp"
                android:text="@string/interruption_1_wickets"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/wickets_lost_interruption_2_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/wickets_lost_interruption_2_text_view"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_toEndOf="@+id/wickets_lost_interruption_2_text_view"
                android:layout_toRightOf="@+id/wickets_lost_interruption_2_text_view"
                android:hint="wickets"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/overs_remaining_interruption_2_text_view"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/wickets_lost_interruption_2_text_view"
                android:paddingRight="55dp"
                android:paddingTop="10dp"
                android:text="@string/interruption_1_remaining"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/overs_remaining_interruption_2_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/overs_remaining_interruption_2_text_view"
                android:layout_toEndOf="@+id/which_over_interruption_2_text_view"
                android:layout_toRightOf="@+id/which_over_interruption_2_text_view"
                android:hint="@string/overs"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:paddingBottom="15dp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/interruption_3_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/overs_remaining_interruption_2_text_view"
                android:paddingTop="25dp"
                android:text="@string/interruption_3"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/which_over_interruption_3_text_view"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/interruption_3_text_view"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/interruption_1_over"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/which_over_interruption_3_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/which_over_interruption_3_text_view"
                android:layout_toEndOf="@+id/which_over_interruption_3_text_view"
                android:layout_toRightOf="@+id/which_over_interruption_3_text_view"
                android:hint="@string/overs"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:paddingTop="15dp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/wickets_lost_interruption_3_text_view"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/which_over_interruption_3_text_view"
                android:paddingBottom="10dp"
                android:paddingRight="5dp"
                android:text="@string/interruption_1_wickets"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/wickets_lost_interruption_3_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/wickets_lost_interruption_3_text_view"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_toEndOf="@+id/wickets_lost_interruption_3_text_view"
                android:layout_toRightOf="@+id/wickets_lost_interruption_3_text_view"
                android:hint="wickets"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/overs_remaining_interruption_3_text_view"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/wickets_lost_interruption_3_text_view"
                android:paddingRight="55dp"
                android:paddingTop="10dp"
                android:text="@string/interruption_1_remaining"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/overs_remaining_interruption_3_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/overs_remaining_interruption_3_text_view"
                android:layout_toEndOf="@+id/which_over_interruption_3_text_view"
                android:layout_toRightOf="@+id/which_over_interruption_3_text_view"
                android:hint="@string/overs"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:paddingBottom="15dp"
                android:visibility="invisible" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
